--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,27 @@ nav ul li a:hover{
 .block .bRight img{
     padding-top:50px;
 }
+#projects{
+    width:100%;
+    display:flex;
+    justify-content:space-around;
+    flex-wrap:wrap;
+}
+#projects .pro{
+    width:33%;
+    text-align:center;
+    padding:30px;
+}
+#projects .pro p{
+    padding:10px;
+    font-size: 20px;
+}
+#projects .pro img{
+    width: 60%;
+}
+#projects .hov img:hover{
+    opacity:0.7;
+}
 #myProject p{
     padding-top:10px;
     font-size: 20px;
@@ -177,6 +198,7 @@ nav ul li a:hover{
     display:flex;
     justify-content:space-around;
     margin-bottom:70px;
+    flex-wrap:wrap;
 }
 #icon .icons{
     display:block;
@@ -238,13 +260,19 @@ form #btn:hover{
     float:left;
     margin-left:20px;
 }
-.infoAbout .fa-address-card-o, .fa-envelope-open-o,.fa-phone, .fa-map-marker,.fa-rss-square,.fa-sitemap, .fab{
+.infoAbout .fa-address-card-o, .fa-envelope-open-o,.fa-phone, .fa-map-marker,.fa-rss-square,.fa-sitemap,.fa-css3,.fa-mobile-phone,.fab{
     color:rgba(51,51,51,.65);
 }
-.infoAbout .fa-rss-square,.fa-sitemap, .fab{
+.infoAbout .fa-rss-square,.fa-sitemap,.fa-mobile-phone, .fab{
     font-size:30px;
 }
 .infoAbout .fa-rss-square:hover{
+    color: chartreuse;
+}
+.infoAbout .fa-css3:hover{
+    color: chartreuse;
+}
+.infoAbout .fa-mobile-phone:hover{
     color: chartreuse;
 }
 .infoAbout .fa-sitemap:hover{
@@ -254,7 +282,7 @@ form #btn:hover{
     color: chartreuse;
 }
 #info .space{
-    word-spacing:60px;
+    word-spacing:20px;
 }
 footer{
     width:100%;
